--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>voting-poll</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>voting-poll</title><link href=static/css/app.194cf4cd044e2c576e491c53e3836123.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=static/js/vendor.8a6f3748af40a404eaf0.js></script><script type=text/javascript src=static/js/app.8b1384ff3e8a09e2a546.js></script></body></html>
